--- a/web/package.json
+++ b/web/package.json
@@ -74,6 +74,7 @@
     "react-id-swiper": "^3.0.0",
     "react-is": "^16.13.1",
     "react-responsive-modal": "^6.0.1",
+    "react-scroll-parallax": "^2.3.5",
     "react-typist": "^2.0.5",
     "styled-breakpoints": "^6.11.0",
     "styled-components": "^5.2.1",
