--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "naturalmystic-gatsby-sanity-combo",
+  "name": "handshake-foundation-gatsby-sanity-combo",
   "version": "1.0.0",
   "author": "Casey Kennedy <me@caseykennedy.hns.to>",
   "engines": {
@@ -23,5 +23,12 @@
   "devDependencies": {
     "lerna": "^3.22.1",
     "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "@reach/dialog": "^0.13.0",
+    "@reach/tabs": "^0.13.0",
+    "@reach/visually-hidden": "^0.13.0",
+    "gatsby-plugin-netlify-identity": "0.0.3",
+    "react-netlify-identity-widget": "^0.2.7"
   }
 }
