--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "naturalmystic-sanity",
+  "name": "handshake-foundation-sanity",
   "version": "1.0.0",
   "author": "Casey Kennedy <me@caseykennedy.hns.to>",
   "engines": {
