--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naturalmystic-website",
+  "name": "handshake-foundation-website",
   "private": true,
   "description": "Gatsby TypeScript Starter with Styled System",
   "version": "1.0.0",
@@ -16,23 +16,35 @@
     "lint": "tslint -t stylish -p tsconfig.json",
     "lint:fix": "tslint -p tsconfig.json -t stylish --fix",
     "format": "prettier --write content/**/*.yaml",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run:ci": "cypress run --browser chrome --reporter junit --reporter-options 'mochaFile=results/cypress/result.xml'",
     "precommit": "lint-staged",
     "server:open": "start-server-and-test develop http://localhost:8000 cy:open",
     "server:run": "start-server-and-test develop http://localhost:8000 cy:run",
     "server:ci": "start-server-and-test develop http://localhost:8000 cy:run:ci",
     "test:compile": "tsc --project cypress/tsconfig.json",
-    "test:compile:watch": "tsc --watch --project cypress/tsconfig.json"
+    "test:compile:watch": "tsc --watch --project cypress/tsconfig.json",
+    "test": "cross-env CYPRESS_SUPPORT=y npm-run-all -s test:compile server:run",
+    "test:watch": "cross-env CYPRESS_SUPPORT=y npm-run-all -p test:compile:watch server:open",
+    "test:ci": "cross-env CYPRESS_SUPPORT=y npm-run-all -s test:compile server:ci"
   },
   "dependencies": {
     "@reach/dialog": "^0.10.5",
     "@reach/visually-hidden": "^0.10.4",
+    "@react-spring/parallax": "^9.0.0-rc.3",
     "@sanity/block-content-to-react": "^2.0.7",
     "@types/lodash": "^4.14.168",
     "@types/react-hamburger-menu": "0.0.3",
+    "@types/react-headroom": "^2.2.1",
+    "@types/react-typist": "^2.0.1",
     "@types/theme-ui": "^0.3.7",
+    "auth0-js": "^9.14.3",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^3.2.1",
+    "coingecko-api": "^1.0.10",
+    "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-create-client-paths": "^2.10.0",
     "gatsby-plugin-google-tagmanager": "^3.2.0",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-netlify": "^2.11.0",
@@ -47,17 +59,29 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-sanity": "^5.0.6",
     "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-transformer-yaml": "^2.11.0",
+    "google-map-react": "^1.1.7",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "polished": "^3.7.0",
     "react": "^16.14.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.14.0",
     "react-hamburger-menu": "^1.2.1",
+    "react-headroom": "^3.1.0",
     "react-helmet": "^5.2.1",
+    "react-id-swiper": "^3.0.0",
     "react-is": "^16.13.1",
+    "react-qr-code": "^1.1.1",
+    "react-responsive-modal": "^6.0.1",
+    "react-scroll-parallax": "^2.3.5",
+    "react-typist": "^2.0.5",
+    "styled-breakpoints": "^6.11.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "styled-system": "^4.2.4",
+    "swiper": "^5.4.5",
     "theme-ui": "^0.3.5",
     "typescript": "^3.9.7"
   },
@@ -69,6 +93,10 @@
     "@types/styled-components": "^4.4.3",
     "@types/styled-system": "^4.2.2",
     "cross-env": "^5.2.1",
+    "cypress": "^3.8.3",
+    "cypress-testing-library": "^2.6.0",
+    "faunadb": "^3.0.1",
+    "gatsby-cypress": "^0.1.9",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "npm-run-all": "^4.1.5",
@@ -94,6 +122,10 @@
     }
   },
   "lint-staged": {
+    "*.yaml": [
+      "prettier --write",
+      "git add"
+    ],
     "*.{ts,tsx}": [
       "tslint --fix",
       "git add"
