--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,6 @@
     "lint": "tslint -t stylish -p tsconfig.json",
     "lint:fix": "tslint -p tsconfig.json -t stylish --fix",
     "format": "prettier --write content/**/*.yaml",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "cy:run:ci": "cypress run --browser chrome --reporter junit --reporter-options 'mochaFile=results/cypress/result.xml'",
     "precommit": "lint-staged"
   },
   "dependencies": {
@@ -31,62 +28,63 @@
     "@types/theme-ui": "^0.3.7",
     "babel-plugin-styled-components": "^1.12.0",
     "coingecko-api": "^1.0.10",
-    "gatsby": "^2.32.3",
+    "gatsby": "^3.3.0",
     "gatsby-image": "^2.11.0",
-    "gatsby-plugin-google-tagmanager": "^3.2.0",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-netlify": "^2.11.0",
-    "gatsby-plugin-nprogress": "^2.10.0",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.1",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-styled-components": "^3.10.0",
-    "gatsby-plugin-theme-ui": "^0.3.5",
-    "gatsby-plugin-typescript": "^2.12.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-source-sanity": "^5.0.6",
-    "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-plugin-google-tagmanager": "^3.3.0",
+    "gatsby-plugin-image": "^1.3.0",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-netlify": "^3.3.0",
+    "gatsby-plugin-nprogress": "^3.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sanity-image": "^0.6.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-styled-components": "^4.3.0",
+    "gatsby-plugin-theme-ui": "^0.7.0",
+    "gatsby-plugin-typescript": "^3.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-source-sanity": "^7.0.4",
+    "gatsby-transformer-sharp": "^3.3.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
-    "polished": "^3.7.0",
-    "react": "^16.14.0",
+    "polished": "^4.1.1",
+    "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-hamburger-menu": "^1.2.1",
-    "react-helmet": "^5.2.1",
-    "react-id-swiper": "^3.0.0",
+    "react-helmet": "^6.1.0",
+    "react-id-swiper": "^4.0.0",
     "react-is": "^16.13.1",
     "react-qr-code": "^1.1.1",
     "react-responsive-modal": "^6.0.1",
     "react-typist": "^2.0.5",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
-    "styled-system": "^4.2.4",
-    "swiper": "^5.4.5",
-    "theme-ui": "^0.3.5",
-    "typescript": "^3.9.7"
+    "styled-system": "^5.1.5",
+    "swiper": "^6.5.7",
+    "theme-ui": "^0.7.0",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/node": "^10.17.51",
-    "@types/react": "^16.14.3",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-helmet": "^5.0.16",
-    "@types/styled-components": "^4.4.3",
-    "@types/styled-system": "^4.2.2",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-helmet": "^6.1.1",
+    "@types/styled-components": "^5.1.9",
+    "@types/styled-system": "^5.1.11",
     "cross-env": "^5.2.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "start-server-and-test": "^1.12.0",
-    "tslint": "^5.20.1",
+    "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-cypress": "^1.0.4",
     "tslint-plugin-prettier": "^2.3.0",
-    "tslint-react": "^4.2.0"
+    "tslint-react": "^5.0.0"
   },
   "repository": {
     "type": "git",
