--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@types/theme-ui": "^0.3.7",
     "babel-plugin-styled-components": "^1.12.0",
     "coingecko-api": "^1.0.10",
+    "framer-motion": "^4.1.4",
     "gatsby": "^3.3.0",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-google-tagmanager": "^3.3.0",
