--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "gatsby-plugin-nprogress": "^3.3.0",
     "gatsby-plugin-offline": "^4.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sanity-image": "^0.6.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^3.3.0",
