--- a/web/package.json
+++ b/web/package.json
@@ -53,6 +53,7 @@
     "node-fetch": "^2.6.1",
     "polished": "^4.1.1",
     "react": "^17.0.2",
+    "react-add-to-calendar": "^0.1.5",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
     "react-hamburger-menu": "^1.2.1",
