--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^4.1.4",
     "gatsby": "^3.3.0",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-feed": "^3.7.1",
     "gatsby-plugin-google-tagmanager": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
